--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<input id="btn" type="submit" name="Submit">
     <script type="text/javascript" src="./script.js">
 </script>
 
